# solana-program-cli

./: .gitignore  Cargo.toml  README.md  send_program.json  swap_program.json  test-encoder.json  test-send-new.json
src/: account_resolver.rs  ata_manager.rs  borsh_encoder.rs  codegen_send.rs  idl_loader.rs  jupiter_client.rs  main.rs  program_registry.rs  transaction_simulator.rs
