[package]
name = "solana-program-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1"
solana-sdk = "2.1"
anchor-client = "0.31"
anchor-lang = "0.31"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
shellexpand = "3.1"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
spl-token = "6.0"
spl-associated-token-account = "4.0"
sha2 = "0.10"
